--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "v-calendar": "^3.1.2",
     "vue": "^3.5.17",
     "vue-chartjs": "^5.3.2",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue3-touch-events": "^5.0.13"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.4.0",
